Use @enablePreview in tests